# rust-superapp

./: .gitignore  Cargo.toml  docker-compose.yaml
.github/workflows/: rust.yml
books_analytics/: Cargo.toml
books_analytics/src/: main.rs
books_api/: Cargo.toml
books_api/migration/: Cargo.toml
books_api/migration/src/: m20220101_000001_create_table.rs
books_api/src/: http_server.rs  main.rs
books_api/src/dto/: mod.rs
books_api/src/entity/: book.rs  mod.rs  prelude.rs
books_api/src/repository/: mod.rs
books_api/src/service/: book_created_producer.rs  mod.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/events/: constants.rs  mod.rs
common/src/events/dto/: mod.rs
common_tracing/: Cargo.toml
common_tracing/src/: lib.rs
database/: Cargo.toml
database/src/: lib.rs
kafka/: Cargo.toml
kafka/src/: consumer.rs  lib.rs  producer.rs  schema_registry_image.rs  shared.rs
