[workspace]
members = ["common", "books_api", "books_analytics", "database", "kafka"]

[workspace.dependencies]
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3"
serde = { version = "1.0.164", features = ["derive"]}
serde_json = "1.0"
sea-orm = { version = "0.11.3", features = ["macros", "runtime-tokio-rustls", "sqlx-postgres"] }
derive_builder = "0.12.0"
thiserror = "1.0.40"
testcontainers = "0.14.0"
