[package]
name = "common"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {workspace = true}
derive_builder = { workspace = true}
strum = {workspace = true}
apache-avro = {workspace = true}
schema_registry_converter = {workspace = true}
